<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/previous_imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/previous_image"
            android:padding="5dp"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/current_imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_preview_image_boder"
            android:contentDescription="@string/current_image"
            android:padding="5dp"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/next_imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/next_image"
            android:padding="5dp"
            tools:src="@tools:sample/avatars" />
    </LinearLayout>

</layout>